test/redefinition/global_local_bad_func.c
// RUN: %check -e %s
main()
{
	int f(int);
	{
		int f(char *); // CHECK: /error: incompatible redefinition of "f"/
	}
}
